--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@ async function onPlay() {
 }
 
 async function run() {
-   await faceapi.loadTinyFaceDetectorModel('https://hpssjellis.github.io/face-api.js-for-beginners-more-accurate/')
-   await faceapi.loadFaceLandmarkTinyModel('https://hpssjellis.github.io/face-api.js-for-beginners-more-accurate/')
+   await faceapi.loadFaceRecognitionModel('https://hpssjellis.github.io/face-api.js-for-beginners-more-accurate/')
+   await faceapi.loadFaceLandmarkModel('https://hpssjellis.github.io/face-api.js-for-beginners-more-accurate/')
       
    const stream = await navigator.mediaDevices.getUserMedia({ video: {} })
    const videoEl = document.getElementById('inputVideo')
